--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>塔羅牌抽牌程式</title>
+  <title>塔羅牌線上抽牌</title>
   <style>
     /* ==== 整體頁面風格：簡約柔和 + 暖淺綠色系背景 ==== */
     body {
